# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1287 2010-08-12 08:58:13 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta2 (2010/??/??)
 - (2010/08/12) Fixed bug 5613: WYSIWYG Editor not in center position.
 - (2010/08/12) Fixed bug 5612: Change free text fields not working correct in Firefox.
 - (2010/08/11) Fixed bug#5652 - Can't chose Service and SLA when creating new
     tickets.
 - (2010/08/11) Fixed bug#5669 - The customer panel login shows head line
    "Request new password" on FF 3.5. when only must be shown on click "Forgot
    Password?"
 - (2010/08/11) Fixed bug#5689 - The response's body is incomplete.
 - (2010/08/11) Fixed bug#5650 - Height of the article list is not retained.
 - (2010/08/11) Fixed bug#5684 - Drag&Drop in agent dashboard is not working
    with IE7.
 - (2010/08/10) Fixed bug#5579 - Spaces in filenames are converted to + characters
    when downloading in IE.
 - (2010/08/10) Fixed bug#5701 - Tarball includes empty directories.
 - (2010/08/10) Fixed bug#5255 - Accessibility: "ALL" link when selecting an owner
 - (2010/08/10) Fixed bug#5694 - Images in web based installer are not displayed
    when performing installation from source.
 - (2010/08/09) Fixed bug#5661 - In Global Ticket Overview, with IE7 and L-Mode,
    Hover of first Ticket overlaps Action Row Area.
 - (2010/08/09) Fixed bug#5633 - Customer user information is not shown in
    ticket zoom if it was set by AgentTicketCustomer.
 - (2010/08/06) Fixed bug#5676 - Ticket Free Time selection in customer panel is
    broken, because wrong "for" statement inside Label.
 - (2010/08/06) Fixed bug#5691 - Not possbible for a package to modify a file
    that belongs to another package.